k8s_deployment_strategies/03-bluegreen-updates.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-bg
spec:
  selector: { app: web, color: green }  # switch to GREEN
  ports: [{ port: 80, targetPort: 80 }]
