k8s_deployment_strategies/03-bluegreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blue
spec:
  replicas: 2
  selector: { matchLabels: { app: web, color: blue } }
  template:
    metadata: { labels: { app: web, color: blue } }
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports: [{ containerPort: 80 }]
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: www
          configMap: { name: web-v1 }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-green
spec:
  replicas: 2
  selector: { matchLabels: { app: web, color: green } }
  template:
    metadata: { labels: { app: web, color: green } }
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports: [{ containerPort: 80 }]
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: www
          configMap: { name: web-v2 }
---
apiVersion: v1
kind: Service
metadata:
  name: web-bg
spec:
  selector: { app: web, color: blue }  # BLUE first
  ports: [{ port: 80, targetPort: 80 }]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-bg
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: web-bg, port: { number: 80 } } }
